--- a/static/index.html
+++ b/static/index.html
@@ -596,10 +596,12 @@
                 if (!response.ok) {
                     let errorText = 'Upload failed';
                     try {
-                        const error = await response.json();
+                        const clone = response.clone();
+                        const error = await clone.json();
                         errorText = error.detail || error.message || JSON.stringify(error);
                     } catch (e) {
-                        errorText = await response.text() || `HTTP ${response.status}: ${response.statusText}`;
+                        const text = await response.text();
+                        errorText = text || `HTTP ${response.status}: ${response.statusText}`;
                     }
                     throw new Error(errorText);
                 }
@@ -916,10 +918,12 @@
                 if (!response.ok) {
                     let errorText = 'Export failed';
                     try {
-                        const error = await response.json();
+                        const clone = response.clone();
+                        const error = await clone.json();
                         errorText = error.detail || error.message || JSON.stringify(error);
                     } catch (e) {
-                        errorText = await response.text();
+                        const text = await response.text();
+                        errorText = text || `HTTP ${response.status}: ${response.statusText}`;
                     }
                     throw new Error(errorText);
                 }
